--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SheCodes Portfolio</title>
+    <title>SheCodes Portfolio Contact</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -35,22 +35,21 @@
         <h1 class="mb-5">Let's get in touch!</h1>
         <h3>Email</h3>
         <p>
-          <a href="mailto:patricia@gmail.com"> patricia@gmail.com </a>
+          <a href="mailto:tetyana@gmail.com"> tetyana@gmail.com </a>
         </p>
         <h3>Twitter</h3>
         <p>
           <a href="https://www.twitter.com/patricia" target="_blank">
-            @patricia
+            @tetyana
           </a>
         </p>
         <h3>Instagram</h3>
         <p>
           <a href="https://www.instagram.com/patricia.codes" target="_blank">
-            @patricia.codes
+            @tetyana.codes
           </a>
         </p>
       </div>
     </div>
   </body>
 </html>
-
